# quantex

./: .gitignore  Instruction.md  LICENSE  README.md  Wrapper.py  Wrapper_xy.py  Wreapper_xz_scanning.py  defaults.txt  environment.yaml  main.py  pyproject.toml  requirements.txt  test_gramma.py  test_wrapper.py  todo.md  xzdefaults.txt
Cache/: todo.md
Cache/Environment_Requirements/: environment.yaml  requirements.txt
DataProcessing/: RawData_Processing.py
GUI/: GUI.py  MakeGUI.py
Hardware/: Galvo_Mirror.py  NI_PCIe_6321.py  SynthUSB3.py  XMT_E70D4.py  XMT_E70D4_Ser.py  __init__.py
Hardware/DLL/: XMT_DLL_USB.h
Hardware/DLL_Ser/: XMT_DLL_SER.h
Hardware/OpalKelly/: API.py  API_backup.py  API_indev.py  __init__.py
Hardware/Swabian_Pulse_Streamer/: API.py
Hardware/Swabian_TimeTagger20/: API.py
Test/: Relationship between  voltage and location.py  location_voltage_table.txt  piezo_movement_analise.py  test_function.py  test_gramma.py
Test/Results/: location_voltage_table.txt
Threads/: ConfocalScanThread.py  CountThread.py  DataThread.py  GScanThread.py  MaxThread.py  MoveThread.py  XZScanThread.py  __init__.py
cache/Environment_Requirements/: environment.yaml
config/: config_confocal.yaml  env_config.yaml
data/data_pulse_ESR_polarization/: test_version.txt  test_version1.txt  test_version2.txt  test_version2_1.txt
docs/architecture/: resource-management.md
src/hardware/: __init__.py
src/interface/: confocal.py
src/utils/: logger.py
tests/: Galvo_Mirror.py  Relationship between  voltage and location.py  test_function.py  test_gramma.py
ui/: MakeGUI.py
(+128 files in other folders)
