[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantex"
dynamic = ["version"]
description = "Modular quantum experiment control software"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "linjiema"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "PyQt5==5.15.10",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
hardware = [
    "nidaqmx==1.0.1",
    "pulsestreamer==1.7.0",
    "pyserial==3.5",
]
dev = [
    "pytest>=8,<9",
    "pytest-qt>=4.4,<5",
    "ruff>=0.7,<1",
]

[project.urls]
Repository = "https://github.com/linjiema/quantex"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "quantex.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantex*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests/unit"]
markers = [
    "hardware: requires physical laboratory hardware",
    "manual: requires manual interaction or visual inspection",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
